--- a/dev/flat_minimal.Rmd
+++ b/dev/flat_minimal.Rmd
@@ -22,14 +22,21 @@ pkgload::load_all(export_all = FALSE)
     
 ```{r function-get_info_data}
 #' This function gives the info on the dataframe
+#' @param data dataframe
 #' 
-#' 
-#' @return
+#' @return return list of 2 :- dimension and fields of the dataframe
 #' 
 #' @export
 get_info_data <- function(data){
-    print(dim(data))
-    print(colnames(data))
+  if (isFALSE(is.data.frame(data))){
+    stop("The argument `data` must be a data frame")
+  }
+  res <- list(
+    dimension = dim(data),
+    names = names(data)
+  )
+  return(res)
+
 }
 ```
   
@@ -39,8 +46,25 @@ get_info_data(data = iris)
   
 ```{r tests-get_info_data}
 test_that("get_info_data works", {
-  expect_error(get_info_data("mydata"), "mydata is not a data frame")
-#  expect_true(inherits(get_info_data, "function")) 
+  expect_equal(
+    object = get_info_data(data = iris),
+    # Output of `get_info_data(data = iris) %>% dput()`
+    expected = list(
+      dimension = c(150L, 5L),
+      names = c(
+        "Sepal.Length",
+        "Sepal.Width",
+        "Petal.Length",
+        "Petal.Width",
+        "Species"
+      )
+    )
+  )
+  
+  expect_error(
+    object = get_info_data("mydata"), 
+    regexp = "The argument `data` must be a data frame"
+  )
 })
 ```
   
